# pulseaudio-paprefs

./: .gitignore  configure.ac  meson.build  meson_options.txt
doc/: README.html.in  meson.build
po/: LINGUAS  POTFILES.in  as.po  ast.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  it.po  ja.po  kk.po  kn.po  lt.po  meson.build  ml.po  mr.po  ms.po  nl.po  nn.po  or.po  pa.po  paprefs.pot  pl.po  pt.po  pt_BR.po  ru.po  si.po  sk.po  sr.po  (+9 more)
src/: Makefile.am  meson.build  paprefs.cc  paprefs.desktop.in  paprefs.glade
